Closed
Bug 538049
Opened 15 years ago
Closed 15 years ago
nanojit: problem with qjoin in ExprFilter
Categories
(Core Graveyard :: Nanojit, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: n.nethercote, Assigned: n.nethercote)
Details
(Whiteboard: fixed-in-nanojit, fixed-in-tracemonkey)
Attachments
(1 file)
1.06 KB,
patch
|
stejohns
:
review+
|
Details | Diff | Splinter Review |
The problem is that the result is being inserted as a LIR_quad instead of a LIR_float as it should be. Came up as an assertion failure in the i386 backend on lirasm --random.
Attached patch should fix it.
Attachment #420214 -
Flags: review?(stejohns)
Updated•15 years ago
|
Attachment #420214 -
Flags: review?(stejohns) → review+
![]() |
Assignee | |
Comment 1•15 years ago
|
||
Whiteboard: fixed-in-nanojit
![]() |
Assignee | |
Comment 2•15 years ago
|
||
Whiteboard: fixed-in-nanojit → fixed-in-nanojit, fixed-in-tracemonkey
Comment 3•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•11 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•