Bug 538049 - nanojit: problem with qjoin in ExprFilter.  r=stejohns.